--- a/server/djangoapp/templates/djangoapp/about.html
+++ b/server/djangoapp/templates/djangoapp/about.html
@@ -19,7 +19,7 @@
         <nav class="navbar navbar-light bg-light">
             <div class="container-fluid">
                 <div class="navbar-header">
-                      <a class="navbar-brand" href="#">Best Cars Dealership</a>
+                      <a class="navbar-brand" href="{% url 'djangoapp:index' %}">Best Cars Dealership</a>
                 </div>
                 <ul class="nav navbar-nav navbar-right">
                     <li>
@@ -31,8 +31,10 @@
     
             
         </nav>
-        <h1>
-            Welcome to Best Cars dealership, home to the best cars in North America. We sell domestic and imported cars at reasonable prices.
-        </h1>
+        <div class='container'>
+            <h1>
+                Welcome to Best Cars dealership, home to the best cars in North America. We sell domestic and imported cars at reasonable prices.
+            </h1>
+        </div>
     </body>
 </html>
