--- a/server/djangoapp/templates/djangoapp/index.html
+++ b/server/djangoapp/templates/djangoapp/index.html
@@ -20,7 +20,7 @@
     <nav class="navbar navbar-light bg-light">
         <div class="container-fluid">
             <div class="navbar-header">
-                  <a class="navbar-brand" href="#">Best Cars Dealership</a>
+                  <a class="navbar-brand" href="{% url 'djangoapp:index' %}">Best Cars Dealership</a>
             </div>
             <ul class="nav navbar-nav navbar-right">
                 <li>
