--- a/server/djangoapp/templates/djangoapp/add_review.html
+++ b/server/djangoapp/templates/djangoapp/add_review.html
@@ -35,12 +35,34 @@
             <div class="form-group row">
                 <label class="col-sm-2 col-form-label" for="review"><b>Review</b></label>
                 <div class='col-sm-10'>
-                    <textarea class="form-control" placeholder="Add review" rows="3" name="review" >
+                    <textarea class="form-control" placeholder="Add review" rows="3" name="review" minlength="20" >
 
                     </textarea>                        
                 </div>
             </div>
 
+            <fieldset class="form-group">
+
+            
+                <div class="row">
+                    <legend class="col-form-label col-sm-2 pt-0"><b>Purchaced</b></legend>
+                    <div class="col-sm-10">
+                        <div class="form-check">
+                            <input class="form-check-input" type="radio" name="purchace" id="gridRadios1" value=1>
+                            <label class="form-check-label" for="gridRadios1">
+                                Yes
+                            </label>
+                        </div>
+                        <div class="form-check">
+                            <input class="form-check-input" type="radio" name="purchace" id="gridRadios2" value=0 checked>
+                            <label class="form-check-label" for="gridRadios2">
+                                No
+                            </label>
+                        </div>
+                    
+                    </div>
+                </div>
+            </fieldset>
             
 
                 <!-- <label class="col-sm-2 col-form-label" for="purchace"><b>Password</b></label>
@@ -51,14 +73,14 @@
             </div>
             {% endif %} -->
             <div class="form-group row">
-                <label class="col-sm-2 col-form-label" for="purchace_date"><b>Purchace Date</b><label>                
+                <label class="col-sm-2 col-form-label" for="purchace_date"><b>Purchace Date</b></label>                
                 <div class='col-sm-10'>
                     <input type="date" class='form-control' name='purchace_date'>        
                 </div>
             </div>
 
             <div class="form-group row">
-                <label class="col-sm-2 col-form-label" for="car_make"><b>Car Make</b><label>
+                <label class="col-sm-2 col-form-label" for="car_make"><b>Car Make</b></label>
                 <div class='col-sm-10'>
                     <input type="text" class='form-control' name='car_make' placeholder=''>    
                 </div>
@@ -67,16 +89,16 @@
                 
 
             <div class="form-group row">
-                <label class="col-sm-2 col-form-label" for="car_model"><b>Car Model</b><label>
+                <label class="col-sm-2 col-form-label" for="car_model"><b>Car Model</b></label>
                 <div class='col-sm-10'>
                     <input type="text" class='form-control' name='car_model'>    
                 </div>
             </div>
 
             <div class="form-group row">
-                <label class="col-sm-2 col-form-label" for="car_year"><b>Car Year</b><label>
+                <label class="col-sm-2 col-form-label" for="car_year"><b>Car Year</b></label>
                 <div class='col-sm-10'>
-                    <input type="number" min='1900' max='2030' value='2020' class='form-control' name='car_year'>                        
+                    <input type="number" min='1900' max='2030' value='' class='form-control' name='car_year'>                        
                 </div>
             </div>
 
