--- a/server/djangoapp/templates/djangoapp/dealer_details.html
+++ b/server/djangoapp/templates/djangoapp/dealer_details.html
@@ -47,6 +47,27 @@
     </nav>
 
     <!-- Add reviews as cards -->
+    <div class='container'>
+    
+        <div class="card-columns">
+            {% for review in reviews %}
+            <div class='card'>
+                <img class="card-img-left" src="{{MEDIA_URL}}/emoji/{{review.sentiment}}.png" alt="{{review.sentiment}}">
+                <div class="card-body">
+                    <div class="card-title"><h3>{{review.car_make}}, {{review.car_model}}</h3></div>
+                    <div class="card-title"><h3>{{review.car_year}}</h3></div>
+                    <div class="card-text">
+                        {{review.review}}
+                    </div>
+
+                </div>
+
+            </div>
+            {% endfor %}
+
+        </div>
+
+    </div>
 
     </body>
 
